--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1" />
     <title>Kont.me</title>
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-
   <style type="text/css">
     body {
-      font-family: "Montserrat", sans-serif;
-      padding: 0;
-      margin: 0;
+	  font-family: Arial, Helvetica, sans-serif;
     }
   </style>
+  </head>
+
 
   <body>
     <div id="app"></div>
