:art: Style de l'article

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1" />
-    <title>Kont.me</title>
+    <title>Un blog</title>
 
   <style type="text/css">
     body {
