Nouvel article, habillage spécial

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <title>Un blog</title>
 
   <style type="text/css">
+html{
+	  padding: 0;
+	  margin: 0;
+}
     body {
-      padding: 0 .6rem;
+	  padding: 0;
+	  margin: 0;
 	  font-family: Arial, Helvetica, sans-serif;
+
     }
   </style>
   </head>
