--- a/index.html
+++ b/index.html
@@ -24,4 +24,5 @@ html{
     <div id="app"></div>
     <script src="/index.js"></script>
   </body>
+  <a rel="me" href="https://boitam.eu/@maeool">Mastodon</a>
 </html>
